Add album and length to tableWidgetSearch

--- a/player/client/form/MainWindow.ui
+++ b/player/client/form/MainWindow.ui
@@ -79,6 +79,16 @@
                  <string>Artista</string>
                 </property>
                </column>
+               <column>
+                <property name="text">
+                 <string>Album</string>
+                </property>
+               </column>
+               <column>
+                <property name="text">
+                 <string>Tamanho</string>
+                </property>
+               </column>
               </widget>
              </item>
             </layout>
